# bazel_jest_nestjs

./: .bazelignore  .bazelrc  .gitignore  .yarnrc  BUILD.bazel  README.md  WORKSPACE.bazel  jest.config.json  nest-cli.json  package.json  tsconfig.json  workspace-status-command.sh
apps/common/bazel/jest/: index.bzl
libs/apm/: BUILD.bazel  tsconfig.lib.json
libs/apm/src/: BUILD.bazel  apm.constant.ts  apm.decorator.spec.ts  apm.decorator.ts  apm.interceptor.spec.ts  apm.interceptor.ts  apm.module.interface.ts  apm.module.ts  apm.service.interface.ts  apm.service.spec.ts  apm.service.ts  apm.util.spec.ts  apm.util.ts  index.ts
